--- a/04_v-model.html
+++ b/04_v-model.html
@@ -17,6 +17,7 @@
 </body>
     <script src="./lib/vue.js"></script>
     <script>
+        Vue.directives
         let vm = new Vue({
             el:"#app",
             data() {
