--- a/18_router_test.html
+++ b/18_router_test.html
@@ -62,7 +62,8 @@
 <script>
     //組件模板物件
     let login={
-        template:"#login"
+        template:"#login",
+
     };
     let register={
         template:"#register"
