--- a/webpack/src/index.html
+++ b/webpack/src/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<script src="../dist/bundle.js"></script>
+<!-- <script src="../dist/bundle.js"></script> -->
+<script src="/bundle.js"></script>
 <body>
     <ul>
         <li>這次第1個li</li>
@@ -20,5 +21,11 @@
         <li>這是第9個li</li>
         <li>這是第10個li</li>
       </ul>
+
+
+      <div class="box"></div>
+      <div class="box2"></div>
+      <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+
 </body>
 </html>
