--- a/學習/12.2.自訂指令2.html
+++ b/學習/12.2.自訂指令2.html
@@ -35,7 +35,7 @@
 
 <div id="test2">
   <p v-upper-text="msg"></p>
-  <p v-lower-text="msg"></p>
+  <!-- <p v-lower-text="msg"></p> -->
 </div>
 
 <script type="text/javascript" src="./js/vue.js"></script>
